Bug 361543 - KAlarm Automatically Creates New Calendar Named "akonadi_kalarm_resource_N+1" Every Time a New Calender is Created (Add)
Summary: KAlarm Automatically Creates New Calendar Named "akonadi_kalarm_resource_N+1"...
Status: CLOSED FIXED
Alias: None
Product: kalarm
Classification: Applications
Component: Akonadi (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: David Jarvie
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-09 05:38 UTC by kdebugs.anon134
Modified: 2020-08-17 23:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kdebugs.anon134 2016-04-09 05:38:34 UTC
Every time a new alarm calendar file is Added, KAlarm automatically and immediately also creates a calender in the "Calanders" column named "akonadi_kalarm_resource_N+1", where "N+1" is an integer 1 greater than the last created alarm calendar. For example, "akonadi_kalarm_resource_21". When I select (right-click) an "akonadi_kalarm_resource_N+1" calendar and click the menu option labeled "Edit", I discover the "akonadi_kalarm_resource_N+1" contains the same data as the newly added calendar that immediately preceded the creation of the "akonadi_kalarm_resource_N+1" calendar.

For example, If I Add a new calendar named "Test", KAlarm immediately and automatically adds a calendar named "akonadi_kalarm_resource_10". When I select (right-click) the "akonadi_kalarm_resource_10" calendar and click the menu option labeled "Edit", I discover "akonadi_kalarm_resource_10" contains the same data as the calendar named "Test".

If the automatically created "akonadi_kalarm_resource_10" calender is deleted, the newly added "Test" calender tied to "akonadi_kalarm_resource_10" is automatically deleted.

This undesirable behavior happens every time, even in a newly created Linux account.

KAlarm Version 2.11.4-5ak
Using:
KDE Frameworks 5.20.0
Qt 5.5.1 (built against 5.5.1)
The xcb windowing system

Running on openSUSE Leap 42.1 from openSUSE binary RPM's

Reproducible: Always

Steps to Reproduce:
1) Click the "Add" button in the column labeled "Calendars".
2) Click the option labeled "KAlarm Calendar File".
3) Enter "/home/tux/Test 13.ics" in the text field labeled "Filename:".
4) Enter "Test 13" in the text field labeled "Name:".
5) Click the button labeled "OK".

Actual Results:  
KAlarm creates a calender named "Test 13", and also immediately creates a calender named "akonadi_kalarm_resource_11" that is tied to the calender named "Test 13".

Expected Results:  
KAlarm should have created ONLY a new calendar with the name specified during creation.
Comment 1 David Jarvie 2016-04-12 21:51:37 UTC
The calendar named "akonadi_kalarm_resource_*" is added to the calendars list as soon as the calendar configuration dialog is displayed. When one entry for the new calendar is deleted, the other also disappears from the list.
Comment 2 kdebugs.anon134 2016-04-13 12:48:08 UTC
Wow!  :)  Thank you very much for getting on this so quickly!  :)  :)
Comment 3 David Jarvie 2016-04-13 20:52:52 UTC
Git commit 71c5ae4f4f24546e46179e1e233dda3da756152a by David Jarvie.
Committed on 13/04/2016 at 20:48.
Pushed by djarvie into branch 'Applications/16.04'.

Don't show spurious extra calendar after adding new calendar

After adding a new calendar, the calendar list showed two entries
for the new calendar, one labelled "akonadi_kalarm_resource_*" and
with invalid details.

M  +2    -1    kalarm/Changelog
M  +2    -0    kalarm/collectionmodel.cpp

http://commits.kde.org/kdepim/71c5ae4f4f24546e46179e1e233dda3da756152a