Don't show spurious extra calendar after adding new calendar

After adding a new calendar, the calendar list showed two entries
for the new calendar, one labelled "akonadi_kalarm_resource_*" and
with invalid details.

BUG: 361543